@@ -594,11 +594,11 @@ int	DBadd_trend(zbx_uint64_t itemid, double value, int clock);
 int	DBadd_trend_uint(zbx_uint64_t itemid, zbx_uint64_t value, int clock);
 
 void	DBadd_condition_alloc(char **sql, int *sql_alloc, int *sql_offset, const char *fieldname, const zbx_uint64_t *values, const int num);
-char	*zbx_host_string(zbx_uint64_t hostid);
-char	*zbx_host_key_string(zbx_uint64_t itemid);
-char	*zbx_host_key_string_by_item(DB_ITEM *item);
-char	*zbx_host_key_function_string(zbx_uint64_t functionid);
-char	*zbx_user_string(zbx_uint64_t userid);
+
+const char	*zbx_host_string(zbx_uint64_t hostid);
+const char	*zbx_host_key_string(zbx_uint64_t itemid);
+const char	*zbx_host_key_string_by_item(DB_ITEM *item);
+const char	*zbx_user_string(zbx_uint64_t userid);
 
 double	DBmultiply_value_float(DB_ITEM *item, double value);
 zbx_uint64_t	DBmultiply_value_uint64(DB_ITEM *item, zbx_uint64_t value);
